<resources>
    <string name="app_name">MaLongHuii2019120</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="rempwd">记住密码</string>
    <string name="login">登录</string>
    <string name="agin_pwd">确认密码</string>
    <string name="regist">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
