<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp" />
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_marginTop="15dp"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="0dp"
           android:layout_weight="3"
           android:text="@string/username"
           android:textColor="#000"
           android:textSize="20dp"
           android:padding="10dp"
           android:layout_height="wrap_content" />
       <EditText
           android:id="@+id/login_edit_name"
           android:layout_width="0dp"
           android:layout_weight="7"
           android:layout_height="wrap_content" />
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/pwd"
            android:textColor="#000"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/rem_pwd"
        android:layout_marginTop="10dp"
        android:text="@string/rempwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"    
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_regist"
            android:text="@string/regist"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_qq_login"
        android:text="QQ第三方登录"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>