<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistActivity">
    <ImageView
        android:id="@+id/login_img"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/username"
            android:textColor="#000"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/reg_edit_name"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/pwd"
            android:textColor="#000"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/reg_edit_pwd"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/agin_pwd"
            android:textColor="#000"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/agin_pwd"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_qq_login"
        android:text="@string/regist"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>